CSS/menuLayout.css
.col-100 {
  font: normal 20px Arial;
  width: 100%;
  border-bottom: 1px solid darkgrey;
  margin-bottom: 3px;
}

.menuContainer {
   top: 10vh;
   position: relative;
   max-width: 880px;
   width: 100vw;
   margin: 0 auto;
   height: 100vh;
   /* border: 1px solid yellow; */
   padding: 20px;
   z-index: 1002;
}
.menuContainer .panel {
  background-color: rgb(246, 248, 245);
}

#analyticsContainer {
  top: 17vh;
  position: relative;
  max-width: 880px;
  width: 100vw;
  margin: 0 auto;
  /* height: 100%; */
  /* border: 10px solid yellow; */
  padding: 10px;
  z-index: 1002;
}

.analyticsSubject {
  font: normal 18px Arial;
  margin-top: 10px;
  /* border: solid 1px green; */
  position: relative;
}

.panel-body .radioContainer {
   float: left;
   position: relative;
   /* max-width: 100px; */
   width: 33%;
   margin: 0 auto;
   /* height: 100vh; */
   /* background-color: grey; */
   /* border: 1px solid yellow; */
   /* padding: 20px; */
   z-index: 1002;
}

.panel-body #radioLabel {
   margin-left: 4px;
}

#closeAnalytics {
  /* border: solid 1px red; */
  position: relative;
  margin-bottom: 20px;
  /* padding-top: 10px; */
  /* padding-right: 5px; */
  /* font: normal 18px Arial; */
  max-width: 845px;
  width: 95vw;
  height: 40px;
  margin: 0 auto;
}

.container #tableContainer {
  /* position: fixed; */
  width: 95vw;
  max-width: 880px;
  height: 95vh;
  overflow: auto;
  /* border: 1px solid green; */
}

.analytics #tableDataAnalytics td {
  font: normal 12px Arial;
  color: black;
  padding: 2px;
  border: 1px solid #999;
}
#tableDataAnalytics td:nth-child(1) { width: 5px; text-align: left;}
#tableDataAnalytics td:nth-child(2) { width: 45px; text-align: center;}
#tableDataAnalytics td:nth-child(3) { width: 5px; text-align: center;}
#tableDataAnalytics td:nth-child(4) { width: 150px; text-align: left;}
#tableDataAnalytics td:nth-child(5) { width: 250px; text-align: left;}
#tableDataAnalytics td:nth-child(6) { width: 15px; text-align: center;}
#tableDataAnalytics td:nth-child(7) { width: 5px; text-align: right;}
#tableDataAnalytics td:nth-child(8) { width: 20px; text-align: right;}
#tableDataAnalytics td:nth-child(9) { width: 80px; text-align: right;}

#tableContainer .tableDataAnalytics{
   margin-top: 10px;
}
/* #tableContainer .tableDataLee {
   margin-top: 10px;
} */
#saveAnalytics {
  /* border: 2px solid green; */
  margin-top: 30px;
  margin-bottom: 10px;
  margin-left: 3px;
  width: 98%;
  height: 40px;
  font: normal 18px Arial;
}

